--- a/index.html
+++ b/index.html
@@ -4,7 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="dist/output.css" rel="stylesheet" />
+    <link href="src/input.css" rel="stylesheet" />
     <title>Portofolio</title>
   </head>
-  <body></body>
+  <body class="bg-dark">
+    <!-- Herro section start -->
+    <section id="home" class="pt-10 bg-hero lg:w-4/5 mx-auto">
+      <div class="container mx-auto px-8">
+        <div class="flex flex-wrap">
+          <div class="w-full self-center px-4 lg:w-1/2">
+            <h1 class="text-base font-semibold text-primary md:text-xl">
+              Halo Semua 🤟, saya
+              <span class="block font-bold text-4xl mt-1 text-white">
+                Fathoni Zikri Nugroho
+              </span>
+            </h1>
+            <h3 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">
+              Back End Developer
+            </h3>
+            <p class="font-medium text-slate-400 mb-10 leading-relaxed">
+              Undegraduated Student in University of Indonesia Education | Web
+              developer enthusiast
+            </p>
+            <a
+              href="#"
+              class="text-base font-semibold bg-primary py-3 px-8 rounded-full text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+              >Contact Me</a
+            >
+          </div>
+          <div class="w-full self-end px-4 lg:w-1/2">
+            <div class="mt-10 relative lg:mt-0 lg:right-0">
+              <img
+                src="dist/img/fathoni.png"
+                alt="Fathoni"
+                class="max-w-full mx-auto"
+              />
+              <span
+                class="absolute -bottom-5 lg:bottom-7 left-1/2 -translate-x-1/2 -z-10 md:scale-125"
+              >
+                <svg
+                  width="400"
+                  height="400"
+                  viewBox="0 0 200 200"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill="#1363DF"
+                    d="M61.5,-45.6C74,-33.3,74.6,-8.1,68.7,14.7C62.7,37.5,50.2,57.8,31.7,67.3C13.2,76.8,-11.3,75.4,-31.4,65.6C-51.6,55.8,-67.6,37.4,-71.9,16.9C-76.1,-3.6,-68.7,-26.2,-54.8,-38.9C-40.9,-51.5,-20.4,-54.2,2,-55.8C24.5,-57.4,48.9,-57.9,61.5,-45.6Z"
+                    transform="translate(100 100) scale(1.2) "
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Herro section end -->
+
+    <!-- about me section start -->
+
+    <section id="about" class="pt-36 pb-32 lg:w-4/5 mx-auto">
+      <div class="container text-white text-center">
+        <div class="w-full">
+          <h1 class="text-4xl font-semibold">About Me</h1>
+          <h2 class="mt-4 text-lg font-medium">My Introduction</h2>
+        </div>
+        <div class="flex flex-wrap">
+          <div class="w-full px-4 mb-10"></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- about me section end -->
+  </body>
 </html>
