--- a/index.html
+++ b/index.html
@@ -4,53 +4,137 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="dist/output.css" rel="stylesheet" />
     <link href="src/input.css" rel="stylesheet" />
     <title>Portofolio</title>
   </head>
   <body class="bg-dark">
+    <!-- Navbar section start -->
+
+    <header
+      class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10"
+    >
+      <div class="container md:w-4/5 mx-auto">
+        <div class="flex items-center justify-between relative">
+          <div class="px-4">
+            <a href="#home" class="text-slate-100 font-bold text-lg block py-6">
+              fath
+            </a>
+          </div>
+          <div class="flex items-center px-4">
+            <button
+              id="hamburger"
+              name="hamburger"
+              class="block absolute right-4 lg:hidden"
+            >
+              <span
+                class="hamburger-line transition duration-300 ease-in-out origin-top-left"
+              ></span>
+              <span
+                class="hamburger-line transition duration-300 ease-in-out"
+              ></span>
+              <span
+                class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"
+              ></span>
+            </button>
+
+            <nav
+              id="nav-menu"
+              class="hidden absolute text-slate-100 py-5 bg-primary shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none g:rounded-none"
+            >
+              <ul class="block lg:flex">
+                <li class="group">
+                  <a
+                    href="#home"
+                    class="text-base py-2 mx-8 lg:mx-4 font-semibold text-sm flex group-hover:text-secondary"
+                  >
+                    Home</a
+                  >
+                </li>
+                <li class="group">
+                  <a
+                    href="#about"
+                    class="text-base py-2 mx-8 lg:mx-4 font-semibold text-sm flex group-hover:text-secondary"
+                  >
+                    About</a
+                  >
+                </li>
+                <li class="group">
+                  <a
+                    href="#portfolio"
+                    class="text-base py-2 mx-8 lg:mx-4 font-semibold text-sm flex group-hover:text-secondary"
+                  >
+                    Portfolio</a
+                  >
+                </li>
+                <li class="group">
+                  <a
+                    href="#contact"
+                    class="text-base py-2 mx-8 lg:mx-4 font-semibold text-sm flex group-hover:text-secondary"
+                  >
+                    Contact</a
+                  >
+                </li>
+                <li class="group">
+                  <a
+                    href="#certificate"
+                    class="text-base py-2 mx-8 lg:mx-4 font-semibold text-sm flex group-hover:text-secondary"
+                  >
+                    Certificate</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Navbar section end -->
+
     <!-- Herro section start -->
-    <section id="home" class="pt-10 bg-hero lg:w-4/5 mx-auto">
+    <section id="home" class="mt-36 lg:mt-20 bg-hero lg:w-4/5 mx-auto">
       <div class="container mx-auto px-8">
         <div class="flex flex-wrap">
-          <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">
-              Halo Semua 🤟, saya
-              <span class="block font-bold text-4xl mt-1 text-white">
-                Fathoni Zikri Nugroho
-              </span>
+          <div class="w-full self-center px-4 lg:w-3/5" data-aos="fade-right">
+            <h1
+              class="text-base font-bold text-3xl md:text-6xl my-5 text-slate-100"
+            >
+              Hi, I'm Fathoni 🤟
             </h1>
-            <h3 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">
+            <h3 class="font-semibold text-slate-100 text-lg mb-5 lg:text-xl">
               Back End Developer
             </h3>
             <p class="font-medium text-slate-400 mb-10 leading-relaxed">
-              Undegraduated Student in University of Indonesia Education | Web
-              developer enthusiast
+              Undegraduated Student in University of Indonesia Education & Web
+              development enthusiast
             </p>
             <a
               href="#"
-              class="text-base font-semibold bg-primary py-3 px-8 rounded-full text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+              class="btn text-base font-semibold py-3 px-8 rounded-lg text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
               >Contact Me</a
             >
           </div>
-          <div class="w-full self-end px-4 lg:w-1/2">
+          <div class="w-full self-end px-4 lg:w-2/5" data-aos="fade-left">
             <div class="mt-10 relative lg:mt-0 lg:right-0">
               <img
                 src="dist/img/fathoni.png"
                 alt="Fathoni"
-                class="max-w-full mx-auto"
+                class="max-w-full w-3/4 mx-auto"
+                data-aos="fade-up"
               />
               <span
-                class="absolute -bottom-5 lg:bottom-7 left-1/2 -translate-x-1/2 -z-10 md:scale-125"
+                class="absolute -bottom-5 lg:bottom-5 left-1/2 -translate-x-1/2 -z-10 md:scale-125"
               >
                 <svg
-                  width="400"
-                  height="400"
+                  width="300"
+                  height="300"
                   viewBox="0 0 200 200"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
-                    fill="#1363DF"
+                    fill="#0ea5e9"
                     d="M61.5,-45.6C74,-33.3,74.6,-8.1,68.7,14.7C62.7,37.5,50.2,57.8,31.7,67.3C13.2,76.8,-11.3,75.4,-31.4,65.6C-51.6,55.8,-67.6,37.4,-71.9,16.9C-76.1,-3.6,-68.7,-26.2,-54.8,-38.9C-40.9,-51.5,-20.4,-54.2,2,-55.8C24.5,-57.4,48.9,-57.9,61.5,-45.6Z"
                     transform="translate(100 100) scale(1.2) "
                   />
@@ -65,18 +149,258 @@
 
     <!-- about me section start -->
 
-    <section id="about" class="pt-36 pb-32 lg:w-4/5 mx-auto">
-      <div class="container text-white text-center">
+    <section id="about" class="pt-20 pb-20 mt-20">
+      <div class="container text-white text-center lg:w-4/5 mx-auto">
         <div class="w-full">
-          <h1 class="text-4xl font-semibold">About Me</h1>
-          <h2 class="mt-4 text-lg font-medium">My Introduction</h2>
+          <h2 class="text-3xl md:text-4xl text-slate-100 font-bold mb-6">
+            About Me
+          </h2>
+          <h3 class="text-slate-500 font-medium">My Introduction</h3>
         </div>
-        <div class="flex flex-wrap">
-          <div class="w-full px-4 mb-10"></div>
+        <div class="flex flex-wrap mt-16 w-3/4 mx-auto">
+          <div class="w-full px-4 mb-10 lg:w-1/2">
+            <img
+              src="/dist/img/basket.jpg"
+              alt="basket"
+              width="350"
+              height="350"
+              class="max-w-full mx-auto rounded-lg"
+              data-aos="zoom-in"
+            />
+          </div>
+          <div class="w-full px-4 mb-10 lg:w-1/2">
+            <p class="mt-4 text-slate-300 mb-10 text-base lg:text-md">
+              I am enthusiastic, dicipline, high motivation, and organized
+              person, working in web technologies, delivering quality work.
+            </p>
+            <a
+              href="#"
+              class="btn text-base font-semibold bg-primary py-3 px-8 rounded-lg text-white hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
+              >Download CV</a
+            >
+          </div>
         </div>
       </div>
     </section>
 
     <!-- about me section end -->
+
+    <!-- skills section start -->
+
+    <section id="skills" class="py-20 text-center lg:w-4/5 mx-auto">
+      <div class="container text-white px-8">
+        <div class="w-full">
+          <h2 class="text-3xl md:text-4xl text-slate-100 font-bold mb-6">
+            Skills
+          </h2>
+          <h3 class="text-slate-500 font-medium">My Technical Skills</h3>
+        </div>
+        <div class="flex flex-wrap mt-10 w-full">
+          <!-- backend skill -->
+          <div class="w-full my-2 mx-auto mb-10 lg:w-1/3" data-aos="zoom-in">
+            <div class="flex w-full justify-between items-cemter">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 512"
+                width="30"
+                height="35"
+              >
+                <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                  fill="#0ea5e9"
+                  d="M41.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 41.4 86.6zM288 416H576c17.7 0 32 14.3 32 32s-14.3 32-32 32H288c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
+                />
+              </svg>
+              <div class="flex-1 text-start ml-6">
+                <h3 class="text-xl md:text-2xl mb-2 font-bold text-slate-300">
+                  Backend Developer
+                </h3>
+                <p class="font-medium text-slate-500 text-md">
+                  Building an API with clean architecture and good performance
+                </p>
+              </div>
+            </div>
+            <div class="h-auto mt-4 overflow-hidden pl-14">
+              <ul class="space-y-3 text-sm text-left">
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Node Js</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Express Js</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >My SQK</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >PostgreSQL</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Mongo DB</span
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- frontend skill -->
+          <div class="w-full my-2 mx-auto mb-10 lg:w-1/3" data-aos="zoom-in">
+            <div class="flex w-full justify-between items-cemter">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 512"
+                width="30"
+                height="35"
+                class="text-sky-500"
+              >
+                <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                  fill="#0ea5e9"
+                  d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3L562.7 256l-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3z"
+                />
+              </svg>
+              <div class="flex-1 text-start ml-6">
+                <h3 class="text-xl md:text-2xl mb-2 font-bold text-slate-300">
+                  Frontend Developer
+                </h3>
+                <p class="font-medium text-slate-500 text-md">
+                  Building an responsive and progresive web app
+                </p>
+              </div>
+            </div>
+            <div class="h-auto mt-4 overflow-hidden pl-14">
+              <ul class="space-y-3 text-sm text-left">
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >HTML</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base">CSS</span>
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >JavaScript</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Bootstrap</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Vue Js</span
+                  >
+                </li>
+                <li>
+                  🎯
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >React Js</span
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- tools -->
+          <div class="w-full my-2 mx-auto mb-10 lg:w-1/3" data-aos="zoom-in">
+            <div class="flex w-full justify-between items-cemter">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 448 512"
+                width="30"
+                height="35"
+              >
+                <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                <path
+                  fill="#0ea5e9"
+                  d="M80 104c13.3 0 24-10.7 24-24s-10.7-24-24-24S56 66.7 56 80s10.7 24 24 24zm80-24c0 32.8-19.7 61-48 73.3v87.8c18.8-10.9 40.7-17.1 64-17.1h96c35.3 0 64-28.7 64-64v-6.7C307.7 141 288 112.8 288 80c0-44.2 35.8-80 80-80s80 35.8 80 80c0 32.8-19.7 61-48 73.3V160c0 70.7-57.3 128-128 128H176c-35.3 0-64 28.7-64 64v6.7c28.3 12.3 48 40.5 48 73.3c0 44.2-35.8 80-80 80s-80-35.8-80-80c0-32.8 19.7-61 48-73.3V352 153.3C19.7 141 0 112.8 0 80C0 35.8 35.8 0 80 0s80 35.8 80 80zm232 0c0-13.3-10.7-24-24-24s-24 10.7-24 24s10.7 24 24 24s24-10.7 24-24zM80 456c13.3 0 24-10.7 24-24s-10.7-24-24-24s-24 10.7-24 24s10.7 24 24 24z"
+                />
+              </svg>
+              <div class="flex-1 text-start ml-6">
+                <h3 class="text-xl md:text-2xl mb-2 font-bold text-slate-300">
+                  Tools
+                </h3>
+                <p class="font-medium text-slate-500 text-md">
+                  Tools to help me when developing website
+                </p>
+              </div>
+            </div>
+            <div class="h-auto mt-4 overflow-hidden pl-14">
+              <ul class="space-y-3 text-sm text-left">
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Visual Studio Code</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base">Git</span>
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Github / Githlab</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Insomnia</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Postman</span
+                  >
+                </li>
+                <li>
+                  ✔
+                  <span class="ml-3 text-slate-300 text-md text-base"
+                    >Railway</span
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- about me section end -->
+
+    <script src="dist/js/script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+        offset: 300, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 500, // values from 0 to 3000, with step 50ms
+        easing: "ease", // default easing for AOS animations
+        once: true, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: "top-bottom",
+      });
+    </script>
   </body>
 </html>
